# heycat

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile.dev  README.md  RECORDING_REFACTOR_PLAN.md  agile-tcr.config.ts  bunfig.toml  devloop.config.ts  docker-compose.yml  index.html  package.json  review_instructions.md  splash.html  tailwind.config.js  ui.md  vite.config.ts  vitest.config.ts  workflow.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activation.rs  audio_constants.rs  audio_constants_test.rs  device_handler.rs  device_handler_test.rs  events.rs  events_test.rs  lib.rs  main.rs  shutdown.rs  shutdown_test.rs  swift.rs  swift_test.rs  wake_handler.rs
src-tauri/src/app/: setup.rs
src-tauri/src/audio/: agc.rs  cpal_backend.rs  device.rs  device_test.rs  diagnostics.rs  diagnostics_test.rs  mod.rs  monitor.rs  monitor_test.rs  preprocessing.rs  swift_backend.rs  swift_backend_test.rs  thread.rs  thread_test.rs  wav.rs  wav_test.rs
src-tauri/src/audio/denoiser/: dtln.rs  mod.rs  shared.rs  tests.rs
src-tauri/src/commands/: dictionary.rs  dictionary_test.rs  logic.rs  mod.rs  mod_test.rs  recording.rs  tests.rs  window.rs  window_context.rs
src-tauri/src/commands/common/: emitter.rs  emitter_test.rs  mod.rs  mod_test.rs  state_access.rs  state_access_test.rs
src-tauri/src/dictionary/: expander.rs  expander_test.rs  mod.rs  store.rs  store_test.rs
src-tauri/src/hotkey/: cgeventtap_backend.rs  cgeventtap_backend_test.rs  double_tap.rs  double_tap_test.rs  integration.rs  integration_test.rs  mod.rs  mod_test.rs  rdev_backend.rs  rdev_backend_test.rs  tauri_backend.rs
src-tauri/src/hotkey/escape/: listener_test.rs  mod.rs
src-tauri/src/hotkey/integration/: cancel_handler.rs  cancel_handler_test.rs  config.rs  mod.rs  ptt_handler.rs  ptt_handler_test.rs  toggle_handler.rs  toggle_handler_test.rs
src-tauri/src/keyboard/: keyboard_test.rs  mod.rs  synth.rs  synth_test.rs
src-tauri/src/keyboard_capture/: cgeventtap.rs  cgeventtap_test.rs  mod.rs  mod_test.rs  permissions.rs  permissions_test.rs
src-tauri/src/keyboard_capture/cgeventtap/: callback.rs  capture.rs  cgeventtap_test.rs  keycodes.rs  mod.rs  modifiers.rs  types.rs
src-tauri/src/listening/: buffer.rs  cancel.rs  coordinator.rs  detector.rs  manager.rs  mod.rs  pipeline.rs  silence.rs  vad.rs
src-tauri/src/model/: download.rs  download_test.rs  mod.rs
src-tauri/src/parakeet/: manager.rs  mod.rs  normalize.rs  shared.rs  shared_test.rs  streaming.rs  types.rs  utils.rs  utils_test.rs
src-tauri/src/recording/: coordinator.rs  coordinator_test.rs  mod.rs  silence.rs  silence_test.rs  state.rs  state_test.rs  vad.rs  vad_test.rs
src-tauri/src/spacetimedb/: mod.rs  sidecar.rs  sidecar_test.rs  subscriptions.rs  subscriptions_test.rs
src-tauri/src/spacetimedb/client/: integration_test.rs  mod.rs  mod_test.rs
src-tauri/src/spacetimedb/client/module_bindings/: add_dictionary_entry_reducer.rs  add_recording_reducer.rs  add_transcription_reducer.rs  add_voice_command_reducer.rs  add_window_context_reducer.rs  delete_dictionary_entry_reducer.rs  delete_recording_by_path_reducer.rs  delete_recording_reducer.rs  delete_transcription_reducer.rs  delete_voice_command_reducer.rs  delete_window_context_reducer.rs  dictionary_entry_table.rs  dictionary_entry_type.rs  mod.rs  recording_table.rs  recording_type.rs  transcription_table.rs  transcription_type.rs  update_dictionary_entry_reducer.rs  update_voice_command_reducer.rs  (+5 more)
src-tauri/src/storage/: mod.rs  mod_test.rs  recording.rs  recording_test.rs  traits.rs  traits_test.rs  transcription.rs  transcription_test.rs
src-tauri/src/transcription/: service.rs  service_test.rs
src-tauri/src/turso/: dictionary.rs  dictionary_test.rs  schema.rs
src-tauri/src/util/: mod.rs  mod_test.rs  runtime.rs  runtime_test.rs  settings.rs  settings_test.rs
src-tauri/src/voice_commands/: executor.rs  executor_test.rs  matcher.rs  matcher_test.rs  mod.rs  registry.rs  registry_test.rs
src-tauri/src/voice_commands/actions/: app_launcher_test.rs  mod.rs  text_input.rs  text_input_test.rs
src-tauri/src/whisper/: context.rs  mod.rs
src-tauri/src/window_context/: detector.rs  detector_test.rs  mod.rs  monitor.rs  monitor_test.rs  resolver.rs  resolver_test.rs  store.rs  store_test.rs  types.rs  types_test.rs
src-tauri/src/worktree/: collision.rs  collision_test.rs  detector.rs  detector_test.rs  mod.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/swift-lib/: AudioDevices.swift  SharedAudioEngine.swift  lib.swift
(+658 files in other folders)
