[package]
name = "heycat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "heycat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
chrono = "0.4"
dirs = "5.0"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync"] }
parakeet-rs = "0.2"
voice_activity_detector = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
strsim = "0.11"
thiserror = "2"
enigo = "0.2"
regex = "1"
ringbuf = "0.4"
biquad = "0.4"
parking_lot = "0.12"
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
ctrlc = "3.4"
objc = "0.2"
foreign-types = "0.5"
io-kit-sys = "0.4"
swift-rs = "1.0"

# Turso/libsql for embedded SQLite database
libsql = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"

[[example]]
name = "test_transcribe"
path = "examples/test_transcribe.rs"

[lints.rust]
# Allow coverage and coverage_nightly cfg flags used by cargo-llvm-cov
# Also suppress warnings from objc crate's use of cargo-clippy feature
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
    'cfg(feature, values("cargo-clippy"))'
] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[profile.dev]
codegen-units = 256
incremental = true
opt-level = 0

[profile.test]
inherits = "dev"
codegen-units = 256
